# HKU_Dissertation

./: .gitignore  Mid_Term_Report.md  Mid_Term_Report_Revised.md  README.md  attribute_registry.json  performance_stats.json  pyproject.toml  requirements.txt  stability_test_results.json  start_webgui.sh  test_comparison.py  test_comparison_full.py  test_comparison_timed.py  test_stability.py  test_video_person_matching.py  video_test_webgui.py
.obsidian/: workspace.json
apps/: video_test_webgui.py
chroma_db/: chroma.sqlite3
configs/: config.example.yaml
crossmedia_pid/: ALIYUN_MODELS.md  SETUP_README.md  __init__.py  app.py  cli.py  config.py  dataset.py  environment.yml  main.py  setup.py  setup_env.sh  test_api.py
crossmedia_pid/api/: __init__.py  routes.py
crossmedia_pid/core/: __init__.py  extractor.py  feature_vlm.py  matcher.py  vectorizer.py
crossmedia_pid/db/: __init__.py  chroma_store.py
crossmedia_pid/utils/: __init__.py  registry.py
docs/: setup.md
docs/dissertation/: README.md  main.tex  preamble.tex  references.bib
docs/dissertation/appendices/: configuration.tex  software_artifact.tex
docs/dissertation/chapters/: 01_introduction.tex  02_integrative_methodology.tex  02_literature_review.tex  03_integrative_discussion.tex  04_conclusion.tex
docs/reports/: Mid_Term_Defense.pptx  Mid_Term_Report_Revised.md
experiments/: test_api.py  test_comparison.py  test_comparison_full.py  test_comparison_timed.py  test_stability.py  test_video_person_matching.py
scripts/: setup_env.sh  start_webgui.sh
tests/: test_dataset_export.py
(+24 files in other folders)
